--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,22 @@
     </plugins>
     </build>
     <dependencies>
+
+
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.10.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.11</artifactId>
+            <version>2.4.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.11</artifactId>
+            <version>2.4.8</version>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
